--- a/Index-LaPageWeb.html
+++ b/Index-LaPageWeb.html
@@ -25,7 +25,7 @@
         <li><h3><u>Comment est fait une page web</u> ?</h3></li>
     </ol>
     <dl>
-        <dt>Une page web est créé par trois langage informatique different qui on chaqu'une utilité:</dt>
+        <dt>Une page web est créé par trois langage informatique different qui on chaqun une utilité:</dt>
         <dd>
             <ul>
                 <li>Le premier est l'<strong>Html</strong> qui sers a créé le texte et les liens qui s'y trouve.<br></li>
@@ -33,6 +33,20 @@
                 <li>Le deuxieme est le <strong>CSS</strong> qui a pour but d'embelir les pages avec des images ect<br></li>
                 <br>
                 <li>Le troisieme est le <strong>JavaScript</strong> qui sers a faire les interaction par l'utilisateur sur la page.</li>
+            </ul>
+        </dd>
+    </dl>
+        <li><h3><u>Comment coder ?</u> ?</h3></li>
+        <dl>
+        <dt>Chaque langage informatique a ça propre facon d'être coder,<br>
+            alors voici des lien pour des pages specialiser pour chaque langage</dt>
+        <dd>
+            <ul>
+                <li>L'<a href="HTML-LaPageWeb.html">html</a> est un langage composé d'attribue.</li>
+                <br>
+                <li>Le CSS</li>
+                <br>
+                <li>Le JavaScript</li>
             </ul>
         </dd>
     </dl>
