--- a/HTML-LaPageWeb.html
+++ b/HTML-LaPageWeb.html
@@ -10,6 +10,29 @@
 </head>
 <body>
     <h1>Bienvenue sur la partie <u>html</u> de <em>LaPageWeb</em></h1>
+    <p>L'html est le langage utiliser pour coder le texte et les liens a l'interieur.<br>
+        Pour commencer tout dossier en html il faut mettre un <strong> &lt;!DOCTYPE html&gt;</strong> pour precisez que c'est un document en html.<br> 
+        Si vous voulez definir en quel langue a était fait la page, vous pouvez mettre<br>
+        <strong>&lt;html lang=""&gt;</strong> ,puis mettez la lange entre les gimets.<br><br>
+        Pour après il faudrat mettre le corp de text, il daudrat donc mettre des &lt;head&gt; &lt;body&gt;.<br>
+        <br>
+        On va donc pouvoir commencer à ecrire le texte pour la page.
+        Tout cela se fait avec des attribue.<br>
+        Les attribues son des lettres entouré de cheuvrons ( &lt; &gt; ).<br>
+        Les attribues se mettent au debut et en fin de text avec un &sol; rajouter.:<br>
+        Ex: &lt;p&gt; Je suis un text &lt;p&gt;<br><br>
+
+        <u>Voici la liste des attibuts les plus important:</u>
+        <ul>
+            <li>&lt;p&gt; &lt;&sol;p&gt; est simplement les attibuts pour mettre un text.</li><br>
+            <li>&lt;strong&gt; &lt;&sol; strong&gt; est a mettre autour d'un texte pour le mettre en gras, <br>
+                 ce seras pareil avec &lt;em&gt; &lt;&sol;em&gt; pour mettre en Italic et &lt;u&gt; &lt;&sol;u&gt; pour souligner.</li><br>
+            <li>&lt;h?&gt; &lt;&sol;h?&gt; il faudrat remplacer le "?" par un chiffre pour valoriser un text en gros. Plus le chiffre se raproche de 0, plus le text seras gros.</li>
+        </ul>
+    </p>
+
+    <p>
+        <a href="Index-LaPageWeb.html">Accueil</a> 
+    </p>
 </head>
 <body>
-    
