--- a/HTML-LaPageWeb.html
+++ b/HTML-LaPageWeb.html
@@ -14,12 +14,12 @@
         Pour commencer tout dossier en html il faut mettre un <strong> &lt;!DOCTYPE html&gt;</strong> pour precisez que c'est un document en html.<br> 
         Si vous voulez definir en quel langue a était fait la page, vous pouvez mettre<br>
         <strong>&lt;html lang=""&gt;</strong> ,puis mettez la lange entre les gimets.<br><br>
-        Pour après il faudrat mettre le corp de text, il daudrat donc mettre des &lt;head&gt; &lt;body&gt;.<br>
+        Pour après il faudrat mettre le corp de text, il daudrat donc mettre des <strong>&lt;head&gt; &lt;body&gt;</strong>.<br>
         <br>
         On va donc pouvoir commencer à ecrire le texte pour la page.
         Tout cela se fait avec des attribue.<br>
         Les attribues son des lettres entouré de cheuvrons ( &lt; &gt; ).<br>
-        Les attribues se mettent au debut et en fin de text avec un &sol; rajouter.:<br>
+        Les attribues se mettent au debut et en fin de text avec un &sol; rajouter.:<br><br>
         Ex: &lt;p&gt; Je suis un text &lt;p&gt;<br><br>
 
         <u>Voici la liste des attibuts les plus important:</u>
@@ -27,12 +27,24 @@
             <li>&lt;p&gt; &lt;&sol;p&gt; est simplement les attibuts pour mettre un text.</li><br>
             <li>&lt;strong&gt; &lt;&sol; strong&gt; est a mettre autour d'un texte pour le mettre en gras, <br>
                  ce seras pareil avec &lt;em&gt; &lt;&sol;em&gt; pour mettre en Italic et &lt;u&gt; &lt;&sol;u&gt; pour souligner.</li><br>
-            <li>&lt;h?&gt; &lt;&sol;h?&gt; il faudrat remplacer le "?" par un chiffre pour valoriser un text en gros. Plus le chiffre se raproche de 0, plus le text seras gros.</li>
+            <li>&lt;h?&gt; &lt;&sol;h?&gt; il faudrat remplacer le "?" par un chiffre pour valoriser un text en gros.<br>
+                 Plus le chiffre se raproche de 0, plus le text seras gros.</li><br><br>
+
+                 <em>Lien video:<a href="https://youtu.be/LkZ-KqxgVQ4">https://youtu.be/LkZ-KqxgVQ4</a></em><br><br>
         </ul>
+        Après avoir écrie le texte, on pourras rajouter des liens avec l'attribue <strong>&lt;a href="">text&lt;/a&gt;</strong>.<br>
+        Il faudrat rajouter le lien entre les deux "" et mettre le texte qui servira de lien au lieu du <em>"text".<br></em><br>
+        <em>Ex: &lt;a href="Index-LaPageWeb.html">Accueil&lt;/a></em><br><br>
+        Les lien de ce type vont alors remplacer la page actuel par une autre,<br>
+        mais si vous voulez que la page s'ouvre dans un nouvel onglet il faudrat rajouter:<br>
+        target"blank_" après les deux gimets et avant le &gt;. <br><br>
+        <em>Ex:&lt;sa href="https://grafikart.fr/formations/html" target="_blank">Grafikart html&gt;/a></em><br><br>
+
+        <em>Lien video:<a href="https://youtu.be/gJ_G-gxQRRk">https://youtu.be/gJ_G-gxQRRk</a></em><br><br>
     </p>
 
     <p>
-        <a href="Index-LaPageWeb.html">Accueil</a> 
+        <em><a href="Index-LaPageWeb.html">Accueil</a> <a href="https://grafikart.fr/formations/html" target="_blank">Grafikart html</a></em> 
     </p>
 </head>
 <body>
