--- a/Index-LaPageWeb.html
+++ b/Index-LaPageWeb.html
@@ -12,43 +12,54 @@
     <h1>Bienvenue sur <em>LaPageWeb</em></h1>
     <h2>Quesqu'une page web ?</h2>
     <ol>
-        <li><u>C'est quoi une page web</u> ?</li><br>
-        <li><u>Pourquoi faire une page web</u> ?</li><br>
-        <li><u>Comment est fait une page web</u> ?</li><br>
+        <li><em><a href="#Quoi">C'est quoi une page web ?</a></em></li><br>
+        <li><em><a href="#Pourquoi">Pourquoi faire une page web ?</a></em></li><br>
+        <li><em><a href="#De_quoi">De quoi est fait une page web ?</a></em></li><br>
+        <li><em><a href="#Comment">Comment coder une page web ?</a></em></li><br>
+    </ol>
     </ol>
     <hr>
     <ol>
-        <li><h3><u>C'est quoi une page web</u> ?</h3></li>
+        <li><h3><u id="Quoi" >C'est quoi une page web</id></u> ?</h3></li>
         <p>?</p>
-        <li><h3><u>Pourquoi faire une page web</u> ?</h3></li>
+        <li><h3><u id="Pourquoi" >Pourquoi faire une page web</id></u> ?</h3></li>
         <p>?</p>
-        <li><h3><u>Comment est fait une page web</u> ?</h3></li>
-    </ol>
-    <dl>
-        <dt>Une page web est créé par trois langage informatique different qui on chaqun une utilité:</dt>
-        <dd>
-            <ul>
-                <li>Le premier est l'<strong>Html</strong> qui sers a créé le texte et les liens qui s'y trouve.<br></li>
-                <br>
-                <li>Le deuxieme est le <strong>CSS</strong> qui a pour but d'embelir les pages avec des images ect<br></li>
-                <br>
-                <li>Le troisieme est le <strong>JavaScript</strong> qui sers a faire les interaction par l'utilisateur sur la page.</li>
-            </ul>
-        </dd>
-    </dl>
-        <li><h3><u>Comment coder ?</u> ?</h3></li>
+        <li>
+            <h3><u id="De_quoi" >De quoi est fait une page web</id></u> ?</h3>
+        </li>
         <dl>
-        <dt>Chaque langage informatique a ça propre facon d'être coder,<br>
-            alors voici des lien pour des pages specialiser pour chaque langage</dt>
-        <dd>
-            <ul>
-                <li>L'<a href="HTML-LaPageWeb.html">html</a> est un langage composé d'attribue.</li>
-                <br>
-                <li>Le CSS</li>
-                <br>
-                <li>Le JavaScript</li>
-            </ul>
-        </dd>
-    </dl>
+            <dt>Une page web est créé par trois langage informatique different qui on chaqun une utilité:</dt>
+            <dd>
+                <ul>
+                    <li>Le premier est l'<strong>Html</strong> qui sers a créé le texte et les liens qui s'y trouve.<br></li>
+                    <br>
+                    <li>Le deuxieme est le <strong>CSS</strong> qui a pour but d'embelir les pages avec des images, des couleurs ect. . .<br></li>
+                    <br>
+                    <li>Le troisieme est le <strong>JavaScript</strong> qui sers a faire les interaction par l'utilisateur sur la page.</li>
+                </ul>
+            </dd>
+        </dl>
+        <li>
+            <h3><u id="De_quoi" >Comment coder une page web</id> </u> ?</h3>
+        </li>
+        <dl>
+            <dt>Chaque langage informatique a ça propre facon d'être coder,<br>
+                alors voici des lien pour des pages specialiser pour chaque langage</dt>
+            <dd>
+                <ul>
+                    <li>L'<em><a href="HTML-LaPageWeb.html">html</a></em> est un langage composé d'attribue.</li>
+                    <br>
+                    <li>Le CSS</li>
+                    <br>
+                    <li>Le JavaScript</li>
+                </ul>
+            </dd>
+        </dl>
+    </ol>
+    
+    
+    <p>
+        <em><a href="https://grafikart.fr/cursus" target="_blank">Grafikart</a></em>
+    </p>
 </body>
 </html>
