--- a/Index-LaPageWeb.html
+++ b/Index-LaPageWeb.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Web">
 </head>
 <body>
+    <img src="img/Code_page_ web.png"alt="Code_page_ web">
     <h1>Bienvenue sur <em>LaPageWeb</em></h1>
     <h2>Quesqu'une page web ?</h2>
     <ol>
@@ -33,7 +34,7 @@
                 <ul>
                     <li>Le premier est l'<strong>Html</strong> qui sers a créé le texte et les liens qui s'y trouve.<br></li>
                     <br>
-                    <li>Le deuxieme est le <strong>CSS</strong> qui a pour but d'embelir les pages avec des images, des couleurs ect. . .<br></li>
+                    <li>Le deuxieme est le <strong>CSS</strong> qui a pour but d'embelir les pages.<br></li>
                     <br>
                     <li>Le troisieme est le <strong>JavaScript</strong> qui sers a faire les interaction par l'utilisateur sur la page.</li>
                 </ul>
