--- a/HTTP-LaPageWeb.html
+++ b/HTTP-LaPageWeb.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
+<!DOCTYPE http>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>HTTP</title>
     <meta name="description" content="Ceci est une page Web, coder en html">
     <meta name="keywords" content="Web">
 </head>
 <body>
-    <img src="img/html.png"alt="html" width="100">
-    <h1>Bienvenue sur la partie <u>html</u> de <em>LaPageWeb</em></h1>
-    <iframe src="Histoire htlm-LaPageWeb.html" widht="400" height="300"></iframe><br>
+    <img src="img/http.svg"alt="html" width="100">
+    <h1>Bienvenue sur la partie <u>HTTP</u> de <em>LaPageWeb</em></h1>
     <p>L'html est le langage utiliser pour coder le texte et les liens a l'interieur.<br>
         Pour commencer tout dossier en html il faut mettre un <strong> &lt;!DOCTYPE html&gt;</strong> pour precisez que c'est un document en html.<br> 
         Si vous voulez definir en quel langue a était fait la page, vous pouvez mettre<br>
@@ -73,11 +72,11 @@
         <em>Ex:&lt;img src="img/html.png"alt="html" width="100"&gt;</em>
 
         <sub> Si vous voulez faire une image qui redirige vers un lien quand on lui clic dessus, <br>
-        Vous devrez ré-utiliser le code de la parite <u>Les liens</u> mais vous metterez le /a> après l'image à afficher.</sub><br>
+        Vous devrez ré-utiliser le code de la parite <u>Les liens</u> mais vous metterez le /a> après l'image à afficher.</sub>
 
         <em>&lt;a href="lien" target_blank">
             &gt;img src="htlm.png" alt="htlm"></em>
-            &lt;/a><br><br>
+            &gt;/a>
 
         <em>Lien video:<a href="https://youtu.be/7T9H-P45REg">https://youtu.be/7T9H-P45REg</a></em><br><br>
     </p>
