--- a/Index-LaPageWeb.html
+++ b/Index-LaPageWeb.html
@@ -9,17 +9,30 @@
     <meta name="keywords" content="Web">
 </head>
 <body>
-    <img src="img/Code_page_ web.png"alt="Code_page_ web">
+    <img src="img/Code_page_web.png"alt="Code_page_web">
     <h1>Bienvenue sur <em>LaPageWeb</em></h1>
-    <h2>Quesqu'une page web ?</h2>
-    <ol>
-        <li><em><a href="#Quoi">C'est quoi une page web ?</a></em></li><br>
-        <li><em><a href="#Pourquoi">Pourquoi faire une page web ?</a></em></li><br>
-        <li><em><a href="#De_quoi">De quoi est fait une page web ?</a></em></li><br>
-        <li><em><a href="#Comment">Comment coder une page web ?</a></em></li><br>
-    </ol>
-    </ol>
+ 
+    <table>
+            <tr>
+                <td colsan="2">Liens rapide</td>
+            </tr>
+            <tr>
+                <ol>
+                    <td><li><em><a href="#Quoi">C'est quoi une page web ?</a></em></li><br></td>
+                    <td><li><em><a href="#Pourquoi">Pourquoi faire une page web ?</a></em></li><br></td>
+                    <td><li><em><a href="#De_quoi">De quoi est fait une page web ?</a></em></li><br></td>
+                    <td><li><em><a href="#Comment">Comment coder une page web ?</a></em></li><br></td>
+                </ol>
+            </tr>
+            <tr>
+                <td><li><em><a href="HTML-LaPageWeb.html">Html</a></em></li><br></td>
+                <td><li><em><a href="CSS-LaPageWeb.html">CSS</a></em></li><br></td>
+                <td><li><em><a href="HTTP-LaPageWeb.html">HTTP</a></em></li><br></td>
+                <td><li><em><a href="JavaScript-LaPageWeb.html">JavaScript</a></em></li><br></td>
+            </tr>
+    </table>
     <hr>
+    <h2>Quesqu'une page web ?</h2>
     <ol>
         <li><h3><u id="Quoi" >C'est quoi une page web</id></u> ?</h3></li>
         <p>?</p>
@@ -29,7 +42,7 @@
             <h3><u id="De_quoi" >De quoi est fait une page web</id></u> ?</h3>
         </li>
         <dl>
-            <dt>Une page web est créé par trois langage informatique different qui on chaqun une utilité:</dt>
+            <dt>Une page web est créé par trois langage informatique different qui on chaqun une utilité:</dt><br>
             <dd>
                 <ul>
                     <li>Le premier est l'<strong>Html</strong> qui sers a créé le texte et les liens qui s'y trouve.<br></li>
@@ -41,14 +54,14 @@
             </dd>
         </dl>
         <li>
-            <h3><u id="De_quoi" >Comment coder une page web</id> </u> ?</h3>
+            <h3><u id="Comment" >Comment coder une page web</id> </u> ?</h3>
         </li>
         <dl>
             <dt>Chaque langage informatique a ça propre facon d'être coder,<br>
-                alors voici des lien pour des pages specialiser pour chaque langage</dt>
+                alors voici des lien pour des pages specialiser pour chaque langage</dt><br>
             <dd>
                 <ul>
-                    <li>L'<em><a href="HTML-LaPageWeb.html">html</a></em> est un langage composé d'attribue.</li>
+                    <li>L'html est un langage composé d'attribue.</li>
                     <br>
                     <li>Le CSS</li>
                     <br>
